# Halide-to-Hardware

./: .gitignore  .travis.yml  INSTALL.md  Makefile  README.md  USAGE.md  out
.github/workflows/: regressions.yml  test.yml
apps/: CMakeLists.txt
apps/camera_pipe/: camera_pipe_generator.cpp  process.cpp
apps/hardware_benchmarks/: .gitignore  CMakeLists.txt  Makefile  include.mk
apps/hardware_benchmarks/apps/: Makefile  run_apps.sh
apps/hardware_benchmarks/apps/hologram_wgs/: CMakeLists.txt  Makefile  adb_run_on_device.sh  hologram_wgs_generator.cpp  process.cpp  run.cpp
apps/hardware_benchmarks/apps/unet/down_sample/: CMakeLists.txt  Makefile  down_sample_generator.cpp  process.cpp
apps/hardware_benchmarks/apps/unet/down_sample/golden/: down_sample_compute.h  down_sample_memory.cpp  down_sample_memory.h
apps/hardware_benchmarks/apps/zircon_nop/: CMakeLists.txt  Makefile  process.cpp  zircon_nop_generator.cpp
apps/hardware_benchmarks/handcrafted/: Makefile
apps/hardware_benchmarks/hw_support/: Linebuffer.h  Makefile  Makefile.inc  Stencil.h  bf16_op.cpp  bf16_op.h  compare_json.py  copy_clockwork_schedules.py  copy_to_clockwork.sh  copy_to_docker.sh  (+42 more)
apps/hardware_benchmarks/tests/multi_channel_conv/: CMakeLists.txt  Makefile  multi_channel_conv_generator.cpp  process.cpp
apps/hardware_benchmarks/tests/strided_conv/: CMakeLists.txt  Makefile  process.cpp  strided_conv_generator.cpp  strided_design_top.json
apps/hardware_benchmarks/tests/up_sample/: CMakeLists.txt  Makefile  process.cpp  up_sample_generator.cpp
apps/local_laplacian/: Makefile  process.cpp
apps/support/: Makefile.inc
src/: AssociativeOpsTable.cpp  AsyncProducers.cpp  BoundsInference.cpp  BoundsInference.h  CSE.cpp  Closure.cpp  Closure.h  CodeGen_C.cpp  CodeGen_C.h  CodeGen_Clockwork_Base.cpp  CodeGen_Clockwork_Base.h  CodeGen_Clockwork_Base.h.bak  CodeGen_Clockwork_Target.cpp  CodeGen_Clockwork_Target.cpp.bak  CodeGen_Clockwork_Target.h  CodeGen_Clockwork_Testbench.cpp  CodeGen_Clockwork_Testbench.cpp.bak  CodeGen_Clockwork_Testbench.h  CodeGen_CoreHLS.cpp  CodeGen_CoreHLS.h  CodeGen_CoreHLS_Kernel.cpp  CodeGen_CoreHLS_Kernel.h  CodeGen_CoreIR_Base.cpp  CodeGen_CoreIR_Base.h  CodeGen_CoreIR_Target.cpp  CodeGen_CoreIR_Target.h  CodeGen_CoreIR_Testbench.cpp  CodeGen_CoreIR_Testbench.h  CodeGen_Pono.cpp  CodeGen_Pono.h  CodeGen_RDAI.cpp  CodeGen_RDAI.h  CodeGen_VHLS_Base.cpp  CodeGen_VHLS_Base.h  CodeGen_VHLS_Target.cpp  CodeGen_VHLS_Target.h  CodeGen_VHLS_Testbench.cpp  CodeGen_VHLS_Testbench.h  ConciseCasts.h  CoreIRCompute.cpp  (+79 more)
src/runtime/: HalideRuntime.h
test/correctness/: hwbuffer.cpp  hwbuffer.h
test/scripts/: .nfs000000000173583700013d42  before_install_travis.sh  build_travis.sh  compare_app.sh  compare_cascade.sh  compare_conv_2_1.sh  compare_conv_coreir.sh  compare_harris.sh  compare_test.sh  garnet_docker_build.sh  garnet_docker_testbench.sh  hw_unit_tests.sh  install_travis.sh  mac_settings.sh  non_docker_travis_file.yml  rebuild.sh  reinstall-coreir.sh  run_app.sh  run_conv_coreir.sh  run_harris_coreir.sh  run_hw_unit_tests.sh  run_test.sh
tools/: halide_image.h
tutorial/: lesson_01_basics.cpp
(+1610 files in other folders)
